--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,10 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.2.0'
     compile 'com.android.support:recyclerview-v7:25.2.0'
     compile 'com.google.code.gson:gson:2.7'
+
+    compile 'com.squareup.dagger:dagger:1.2.2'
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    provided 'com.squareup.dagger:dagger-compiler:1.2.2'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.8.0'
 }
